# dm.ai

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  docker-compose.yml
.github/: REVIEW_GUIDE.md
.github/workflows/: ci.yml
dm-api/: Dockerfile  alembic.ini  pyproject.toml
dm-api/alembic/: env.py
dm-api/alembic/versions/: 0001_initial.py
dm-api/src/dm_api/: __init__.py  config.py  main.py
dm-api/src/dm_api/ai/: __init__.py  condenser.py  dm_orchestrator.py
dm-api/src/dm_api/ai/backends/: __init__.py  anthropic_backend.py  base.py  claude_cli_backend.py  factory.py
dm-api/src/dm_api/ai/prompts/: condense_prompt.py  system_prompt.py
dm-api/src/dm_api/api/: ai.py  characters.py  combat.py  locations.py  router.py  sessions.py  worlds.py  ws.py
dm-api/src/dm_api/db/: session.py
dm-api/src/dm_api/db/models/: __init__.py  character.py  chat.py  combat.py  location.py  proposal.py  session.py  world.py
dm-api/tests/: conftest.py  test_characters.py  test_combat.py  test_condenser.py  test_dm_orchestrator.py  test_health.py  test_locations.py  test_proposals.py  test_sessions.py  test_websocket.py  test_worlds.py
dm-ui/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
dm-ui/src/: App.tsx
dm-ui/src/api/: client.ts
dm-ui/src/components/BattleMap/: BattleMap.tsx
dm-ui/src/components/CharacterCard/: CharacterCard.tsx
dm-ui/src/components/CombatTracker/: CombatTracker.tsx
dm-ui/src/components/DMDashboard/: DMDashboard.tsx  NewSessionForm.tsx
dm-ui/src/components/LocationPanel/: LocationPanel.tsx
dm-ui/src/store/: gameStore.ts
docs/: api.md  architecture.md
game-engine/: Dockerfile  pyproject.toml
game-engine/src/game_engine/: __init__.py  interface.py  types.py
game-engine/src/game_engine/core/: __init__.py  character.py  combat.py  conditions.py  dice.py  initiative.py
game-engine/src/game_engine/rules/: __init__.py
game-engine/src/game_engine/rules/dnd_5_5e/: __init__.py  _actions.py  _checks.py  _conditions.py  _damage.py  _validation.py  classes.py  engine.py
game-engine/src/game_engine/rules/dnd_5_5e/data/: __init__.py  items.py  monsters.py  spells.py
game-engine/src/game_engine/types/: __init__.py  enums.py  sheets.py  values.py
game-engine/tests/: test_actions.py  test_conditions.py  test_dice.py  test_engine_checks.py  test_engine_damage_conditions.py  test_initiative.py  test_types.py
