[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dm-api"
version = "0.1.0"
description = "dm.ai FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pgvector>=0.3",
    "redis>=5.0",
    "anthropic>=0.40",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "game-engine @ file://../game-engine",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dm_api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
