[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "game-engine"
version = "0.1.0"
description = "Rule-agnostic RPG game engine with D&D 5.5e implementation"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["src/game_engine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
