[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "game-engine"
version = "0.1.0"
description = "Rule-agnostic RPG game engine with D&D 5.5e implementation"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "black>=24.0",
    "isort>=5.0",
    "autoflake>=2.0",
    "mypy>=1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/game_engine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/game_engine --cov-report=term-missing --cov-report=html --cov-fail-under=75"

[tool.black]
line-length = 99
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 99

[tool.autoflake]
remove-all-unused-imports = true
remove-unused-variables = true
in-place = true
recursive = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
